Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Advertised content_lib_states.pt as a more generic information provider
  showing all the current revisions of the current document.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- cosmit on testI18n
- Moved boxes skins to CPSBoxes
- the list of roots of sections can be specified explicitly in
  getSectionsRoots.py (default is ['sections']).
- Made folder_localrole_search and folder_localrole_form work with
  any id_field for the members directory.