@@ -14,5 +14,6 @@ New internal features:
 - Moved boxes skins to CPSBoxes
 - the list of roots of sections can be specified explicitly in
   getSectionsRoots.py (default is ['sections']).
+- Installer uses the disableEventSubscriber() to disable portal_trees and portal_subcriptions during installation
 - Made folder_localrole_search and folder_localrole_form work with
   any id_field for the members directory.
